# duijie-windsurf-account-manager-simple

./: README.md  README_EN.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json  windsurf-account-manager.exe.manifest
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: account_commands.rs  analytics_commands.rs  api_commands.rs  auto_reset_commands.rs  cunzhi_commands.rs  devin_commands.rs  mod.rs  patch_commands.rs  payment_commands.rs  proto_commands.rs  settings_commands.rs  switch_account_commands.rs  team_commands.rs  windsurf_info.rs
src-tauri/src/models/: account.rs  config.rs  log.rs
src-tauri/src/repository/: data_store.rs
src-tauri/src/services/: auth_context.rs  auth_service.rs  devin_auth_service.rs  mod.rs  windsurf_service.rs
src-tauri/src/utils/: errors.rs
src/api/: index.ts
src/components/: AboutDialog.vue  AccountCard.vue  AccountInfoDialog.vue  AddAccountDialog.vue  BatchImportDialog.vue  BatchUpdatePlanDialog.vue  SettingsDialog.vue  TeamManagementDialog.vue  UpdateDialog.vue  UpdatePlanDialog.vue
src/store/: index.ts
src/store/modules/: accounts.ts  updater.ts
src/types/: index.ts
src/utils/: cardGenerator.ts
src/views/: MainLayout.vue
