[package]
name = "windsurf-account-manager"
version = "1.7.1"
description = "Windsurf Account Manager - Simple"
authors = ["chaogei666"]
license = "AGPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "windsurf_account_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "socks"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = { version = "0.10", features = ["std"] }
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
keyring = "2.0"
rand = "0.8"
hex = "0.4"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
once_cell = "1.19"
serde_urlencoded = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1.10"
zip = "0.6"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["securitybaseapi", "processthreadsapi", "winnt", "handleapi", "minwindef", "shellapi", "winuser"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

